# MLOps-Zoomcamp

./: .gitignore  Commands+to+run+on+EC2+terminal.txt  mlflow-server-kv-pair.pem  mlflow-user_accessKeys.csv  mlflow-user_codecommit_credentials (1).csv  mlflow-user_credentials.csv  mlflow.db  prefect.yaml  pyproject.toml
.prefect/: flows.json
03/: mlops-jith.pem  notebook0.ipynb  notebook1.ipynb  notebook2.ipynb  notebook4.ipynb  notebook5.ipynb
04/: .env  create_s3_bucket_block.py  duration_predicition_explore.ipynb  mlflow.db  notebook0.ipynb  orchestrate.py  orchestrate_2.py  orchestrate_deployment.py  orchestrate_pre_prefect.py  prefect.yaml
04/.prefect/: flows.json
05/: Dockerfile  mlflow-key-pair.pem  mlflow_predict.py  mlfow-jithish.pem  predict.py  pyproject.toml  random_forest.ipynb  test.py
06/: batch.ipynb  batch_1.ipynb  script.ipynb
06/myartifacts/070ac475633148859f7e25fe7fb083a0/artifacts/random-forest-model/: MLmodel  model.pkl
06/mytracks/0/: meta.yaml
06/mytracks/482944799392093117/: meta.yaml
06/mytracks/482944799392093117/86807b21120649e8a7954854127d382f/: meta.yaml
06/mytracks/482944799392093117/b76edb9aecec4414806e9b3f177dc9a5/: meta.yaml
07/: multi_run.ipynb
08/: auto_log.ipynb  lib_autolog.ipynb
09/: mlflow.db  tracking_1.ipynb
10/: custom_model.ipynb  main.py  sklearn_model.pkl
11/: mlflow.db
12/: baseline.py  dummy.ipynb  main.py  mlflow.db  test-1.py  test.py
12/data_dir/: .~lock.diabetes.csv#
12/model_dir/: diabetes_model.joblib
13/: log_model.py  main.py  random_forest_iris_model.pkl
14/: MLproject  conda.yaml  main.py  mlflow.db
15/: MLproject  conda.yaml  main.py  mlflow.db  run.py
17/: mlflow.db  mlflow_client.py  mlflow_client_2.py
18/: MLproject  code.py  conda.yaml  demo.ipynb  mlflow.db  run.py  train.py
demo/: config.py  main.py
(+194 files in other folders)
