[tool.poetry]
name = "zoomcamp"
version = "0.1.0"
description = ""
authors = ["Jithish J <135303624+jithsg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.0"
seaborn = "^0.13.1"
scikit-learn = "^1.4.0"
pyarrow = ">=4.0.0,<15"
mlflow = "^2.9.2"
xgboost = "^2.0.3"
hyperopt = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
